--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-top-tabs": "^5.2.16",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.26.0",
     "expo": "~43.0.2",
     "expo-constants": "~12.1.3",
     "expo-image-picker": "~11.0.3",
