--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-navigation-bar-color": "2.0.1",
     "react-native-paper": "^4.0.1",
